--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^1.5.0",
-    "@langchain/community": "^0.3.19",
-    "@langchain/core": "^0.3.23",
+    "@langchain/community": "^0.3.20",
+    "@langchain/core": "^0.3.26",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
@@ -24,6 +24,7 @@
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "openai": "^4.76.3",
+    "puppeteer": "^23.11.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
